--- a/source/_views/default.html
+++ b/source/_views/default.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head lang="es-mx">
     <title>{% block title %}{{ page.title }}{% endblock %} &mdash; {{ site.title }} &mdash; {{ site.subtitle }}</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href='http://fonts.googleapis.com/css?family=Raleway:500' rel='stylesheet' type='text/css'>
     <link href="{{ site.url }}/components/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -12,7 +13,7 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <link rel="stylesheet" href="{{ site.url }}/components/highlightjs/styles/github.css" />
+    <link rel="stylesheet" href="{{ site.url }}/components/highlightjs/styles/solarized_light.css" />
     <link rel="stylesheet" href="{{ site.url }}/css/style.css" />
     <link rel="alternate" type="application/atom+xml" href="{{ site.url }}/atom.xml" title="{{ site.title }} activity feed" />
     <style>
@@ -79,10 +80,10 @@
     </header>
     <div class="content container">
         <div class="row">
-            <div class="col-sm-8">
+            <div class="col-sm-9">
                 {% block content_wrapper %}{% block content %}{% endblock %}{% endblock %}
             </div>
-            <div class="col-sm-4 sidebar">
+            <div class="col-sm-3 sidebar">
                 <div class="panel panel-default">
                     <div class="panel-heading"><h3 class="panel-title">Categorías</h3></div>
                     <div class="list-group">
