--- a/source/blog.html
+++ b/source/blog.html
@@ -7,21 +7,48 @@ use:
     - posts_categories
 ---
 {% set year = '0' %}
-<h2>Posts Archive</h2>
+<div class="page-header"><h2><span class="glyphicon glyphicon-folder-open"></span> Archivo</h2></div>
 {% for post in page.pagination.items %}
-{% set this_year %}{{ post.date | date("Y") }}{% endset %}
-{% if year != this_year %}
-  {% set month = '0' %}
-  {% set year = this_year %}
-{% endif %}
-{% set this_month %}{{ post.date | date("F") }}{% endset %}
-{% if month != this_month %}
-  {% set month = this_month %}
-  <h3>{{ month }} {{ year }}</h3>
-{% endif %}
-  <div>
-    <a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
-  </div>
+    {% set this_year %}{{ post.date | date("Y") }}{% endset %}
+    {% if year != this_year %}
+      {% set month = '0' %}
+      {% set year = this_year %}
+    {% endif %}
+    {% set this_month %}{{ post.date | date("F") }}{% endset %}
+    {% if month != this_month %}
+      {% set month = this_month %}
+      <h3>{{ month }} {{ year }}</h3>
+    {% endif %}
+    <article class="row">
+        <div class="col-sm-6 posts-list">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h2 class="panel-title">
+                        <span class="glyphicon glyphicon-bookmark"></span>
+                        <a href="{{ site.url }}/blog/categories/{{ post.meta.categories[0]|url_encode(true) }}">
+                            {{ post.categories[0] }}
+                        </a>
+                    </h2>
+                </div>
+                <div class="panel-body">
+                    <h1><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></h1>
+                </div>
+                <div class="panel-footer">
+                    <p class="pull-right">
+                        <span class="glyphicon glyphicon-time"></span> <small>{{ post.date|date("j M Y") }}</small>
+                    </p>
+                    <p class="tags">
+                        <span class="glyphicon glyphicon-tags"></span>&nbsp;
+                        {% for tag in post.meta.tags %}
+                        <a href="{{ site.url }}/blog/tags/{{ tag|url_encode(true) }}">
+                            {{ tag }}
+                        </a>{% if not loop.last %}, {% endif %}
+                        {% endfor %}
+                    </p>
+                </div>
+            </div>
+        </div>
+    </article>
 {% endfor %}
 
 <div>
