--- a/source/_views/about.html
+++ b/source/_views/about.html
@@ -98,12 +98,13 @@
                         {% endfor %}
                     </div>
                 </div>
-                <div class="well sidebar-nav">
-                    <h4>Links</h4>
-                    <ul class="nav">
-                        <li><a href="http://www.comunidadphppuebla.com">comunidadphppuebla.com</a></li>
-                        <li><a href="http://twitter.com/ComPHPPuebla">@ComPHPPuebla</a></li>
-                    </ul>
+                <div class="panel panel-default">
+                    <div class="panel-heading"><h4 class="panel-title">Links</h4></div>
+                    <div class="list-group">
+                        <a href="http://www.comunidadphppuebla.com" class="list-group-item">Comunidad PHP Puebla</a>
+                        <a href="http://www.hfpuebla.org/" class="list-group-item">Hackers & Founders</a>
+                        <a href="http://scala.org.mx/" class="list-group-item">Scala MX</a>
+                    </div>
                 </div>
             </div>
         </div>
