--- a/source/_views/comments.html
+++ b/source/_views/comments.html
@@ -10,15 +10,15 @@
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <link rel="stylesheet" href="{{ site.url }}/components/highlightjs/styles/solarized_light.css" />
     <link rel="stylesheet" href="{{ site.url }}/css/style.css" />
     <link rel="alternate" type="application/atom+xml" href="{{ site.url }}/atom.xml" title="{{ site.title }} activity feed" />
     <style>
-    /** quick fix because bootstrap <pre> has a background-color. */
-    pre code { background-color: inherit; }
+        /** quick fix because bootstrap <pre> has a background-color. */
+        pre code { background-color: inherit; }
     </style>
 </head>
 <body>
@@ -82,6 +82,22 @@
         <div class="row">
             <div class="col-sm-9">
                 {% block content_wrapper %}{% block content %}{% endblock %}{% endblock %}
+                {% if site.disqus %}
+                <div id="disqus_thread"></div>
+                <script type="text/javascript">
+                    var disqus_shortname = '{{ site.disqus }}';
+
+                    (function() {
+                        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                    })();
+                </script>
+                <noscript>
+                    Please enable JavaScript to view the
+                    <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+                </noscript>
+                {% endif %}
             </div>
             <div class="col-sm-3 sidebar">
                 <div class="panel panel-default">
@@ -123,15 +139,15 @@
     {% endblock %}
 
     {% if site.analytics %}
-        <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-            ga('create', '{{ site.analytics }}', 'auto');
-            ga('send', 'pageview');
-        </script>
+        ga('create', '{{ site.analytics }}', 'auto');
+        ga('send', 'pageview');
+    </script>
     {% endif %}
     <script src="{{ site.url }}/components/highlightjs/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
