--- a/source/_views/index.html
+++ b/source/_views/index.html
@@ -36,7 +36,7 @@
                     </div>
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
-                            <li><a href="{{ site.url }}/blog">Archivo</a></li>
+                            <li><a href="{{ site.url }}/archivo">Archivo</a></li>
                             <li><a href="{{ site.url }}/about">About</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
@@ -106,17 +106,16 @@
     {% block scripts %}
     {% endblock %}
 
-    {% if site.google_analytics_tracking_id %}
+    {% if site.analytics %}
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    <script type="text/javascript">
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', '{{site.google_analytics_tracking_id}}', 'auto');
-        ga('send', 'pageview');
-    </script>
+            ga('create', '{{ site.analytics }}', 'auto');
+            ga('send', 'pageview');
+        </script>
     {% endif %}
 </body>
 </html>
