--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@ use:
             <div class="panel-heading">
                 <h2 class="panel-title">
                     <span class="glyphicon glyphicon-bookmark"></span>
-                    <a href="{{ site.url }}/blog/categories/{{ post.meta.categories[0]|url_encode(true) }}">
+                    <a href="{{ site.url }}/blog/categorias/{{ post.meta.categories[0]|url_encode(true) }}">
                         {{ post.categories[0] }}
                     </a>
                 </h2>
@@ -31,7 +31,7 @@ use:
                 {% for tag in post.meta.tags %}
                     <a href="{{ site.url }}/blog/tags/{{ tag|url_encode(true) }}">
                         {{ tag }}
-                    </a>{% if not loop.last %}, {% endif %}
+                    </a>{% if not loop.last %}&nbsp;{% endif %}
                 {% endfor %}
                 </p>
             </div>
