--- a/source/_views/about.html
+++ b/source/_views/about.html
@@ -1,82 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head lang="es-mx">
-    <title>{% block title %}{{ page.title }}{% endblock %} &mdash; {{ site.title }} &mdash; {{ site.subtitle }}</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href='http://fonts.googleapis.com/css?family=Raleway:500' rel='stylesheet' type='text/css'>
-    <link href="{{ site.url }}/components/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <link rel="stylesheet" href="{{ site.url }}/css/style.css" />
-    <link rel="alternate" type="application/atom+xml" href="{{ site.url }}/atom.xml" title="{{ site.title }} activity feed" />
-    <style>
-        /** quick fix because bootstrap <pre> has a background-color. */
-        pre code { background-color: inherit; }
-    </style>
+    {% include 'components/head.html.twig' %}
 </head>
 <body>
     <header class="navigation">
-        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
-                <div class="container-fluid">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="{{ site.url }}/">{{ site.title }}</a>
-                    </div>
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav">
-                            <li><a href="{{ site.url }}/archivo">Archivo</a></li>
-                            <li><a href="{{ site.url }}/about">About</a></li>
-                        </ul>
-                        <ul class="nav navbar-nav navbar-right">
-                            <li>
-                                <a href="http://twitter.com/MontealegreLuis" class="link-icon" target="_blank">
-                                    <img src="/images/twitter.png" alt="@MontealegreLuis">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://www.google.com/+LuisMontealegreV" class="link-icon" target="_blank">
-                                    <img src="/images/googleplus.png" alt="LuisMontealegreV">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://www.linkedin.com/in/montealegreluis" class="link-icon" target="_blank">
-                                    <img src="/images/linkedin.png" alt="MontealegreLuis">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/MontealegreLuis" class="link-icon" target="_blank">
-                                    <img src="/images/github.png" alt="MontealegreLuis">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="mailto:montealegreluis@gmail.com" class="link-icon">
-                                    <img src="/images/email.png" alt="montealegreluis@gmail.com">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="{{ site.url }}/atom.xml" class="link-icon">
-                                    <img src="/images/rss.png" alt="RSS">
-                                </a>
-                            </li>
-
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
+        {% include 'components/menu.html.twig' %}
     </header>
+
     <div class="content container">
         <div class="row">
             <div class="col-sm-2">
@@ -88,53 +19,17 @@
                 {% block content_wrapper %}{% block content %}{% endblock %}{% endblock %}
             </div>
             <div class="col-sm-4 sidebar">
-                <div class="panel panel-default">
-                    <div class="panel-heading"><h3 class="panel-title">Categorías</h3></div>
-                    <div class="list-group">
-                        {% for category,posts in data.posts_categories %}
-                            <a href="{{ site.url }}/blog/categorias/{{ category|url_encode(true) }}" class="list-group-item">
-                                {{ category }}
-                            </a>
-                        {% endfor %}
-                    </div>
-                </div>
-                <div class="panel panel-default">
-                    <div class="panel-heading"><h4 class="panel-title">Links</h4></div>
-                    <div class="list-group">
-                        <a href="http://www.comunidadphppuebla.com" class="list-group-item">Comunidad PHP Puebla</a>
-                        <a href="http://www.hfpuebla.org/" class="list-group-item">Hackers & Founders</a>
-                        <a href="http://scala.org.mx/" class="list-group-item">Scala MX</a>
-                    </div>
-                </div>
+                {% include 'components/sidebar.html.twig' %}
             </div>
         </div>
     </div>
+
     <footer>
-        <div class="container">
-            &copy; {{ "now"|date("Y") }} Luis Montealegre
-            <p  class="pull-right">
-                <a href="http://creativecommons.org/licenses/by-nc/2.5/">
-                    <img src="/images/cc.primary.srr.gif" alt="Algunos derechos reservados">
-                </a>
-            </p>
-        </div>
+        {% include 'components/footer.html.twig' %}
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="{{ site.url }}/components/bootstrap/js/bootstrap.min.js"></script>
-    {% block scripts %}
-    {% endblock %}
-
-    {% if site.analytics %}
-        <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-            ga('create', '{{ site.analytics }}', 'auto');
-            ga('send', 'pageview');
-        </script>
-    {% endif %}
+    <script src="/components/bootstrap/js/bootstrap.min.js"></script>
+    {% include 'components/analytics.html.twig' %}
 </body>
 </html>
