Muevo el HTMl para mostrar el resumen de un post a un include de Twig.

--- a/source/_views/default.html
+++ b/source/_views/default.html
@@ -26,5 +26,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="/components/bootstrap/js/bootstrap.min.js"></script>
     {% include 'components/analytics.html.twig' %}
+    {% include 'components/comments.html.twig' %}
 </body>
 </html>
