--- a/source/_views/post.html
+++ b/source/_views/post.html
@@ -23,13 +23,23 @@
         </div>
 
         {% if page.previous_post or page.next_post %}
-            <nav class="article">
-                <ul>
+            <nav>
+                <ul class="pagination">
                     {% if page.next_post %}
-                        <li>Next: <a class="next" href="{{ site.url }}{{ page.next_post.url }}" title="{{ page.next_post.title }}"><span class="title">{{ page.next_post.title }}</span></a></li>
+                        <li>
+                            <a href="{{ page.next_post.url }}/" title="{{ page.next_post.title }}">
+                                <span class="glyphicon glyphicon-arrow-right"></span>&nbsp;
+                                {{ page.next_post.title }}
+                            </a>
+                        </li>
                     {% endif %}
                     {% if page.previous_post %}
-                        <li>Previous: <a class="previous" href="{{ site.url }}{{ page.previous_post.url }}" title="{{ page.previous_post.title }}"><span class="title">{{ page.previous_post.title }}</span></a></li>
+                        <li>
+                            <a href="{{ page.previous_post.url }}/" title="{{ page.previous_post.title }}">
+                                <span class="glyphicon glyphicon-arrow-left"></span>&nbsp;
+                                {{ page.previous_post.title }}
+                            </a>
+                        </li>
                     {% endif %}
                 </ul>
             </nav>
