--- a/source/index.html
+++ b/source/index.html
@@ -9,9 +9,11 @@ use:
 ---
 <div class="posts-list">
 {% for post in page.pagination.items %}
+    {% if loop.index0 % 2 == 0 %}<div class="row">{% endif %}
     <div class="col-sm-6 posts-list">
         {% include 'components/post.html.twig' %}
     </div>
+    {% if loop.index0 % 2 == 1 or loop.last %}</div>{% endif %}
 {% endfor %}
 </div>
 {% if page.pagination.previous_page or page.pagination.next_page %}
