Fix version of bootstrap. Fix background image size.

--- a/source/404.html
+++ b/source/404.html
@@ -7,7 +7,7 @@ use:
 ---
 <div class="page-header"><h1>La página no existe <small>:(</small></h1></div>
 <p class="lead">Que mal... La página que intentas ver no existe</p>
-<p>Lo más probables es que haya sido el resultado de:</p>
+<p>Lo más probable es que haya sido el resultado de:</p>
 <ul>
     <li>una dirección mal escrita ó</li>
     <li>un enlace antiguo</li>
