Fix styles in Not Found page.

--- a/source/404.html
+++ b/source/404.html
@@ -12,6 +12,7 @@ use:
     <li>una dirección mal escrita ó</li>
     <li>un enlace antiguo</li>
 </ul>
+<p class="lead search-again">Intenta con Google por favor...</p>
 <script>
     var GOOG_FIXURL_LANG = (navigator.language || '').slice(0,2),GOOG_FIXURL_SITE = location.host;
 </script>
