Fix some details in 'about' and 'resume' pages.

--- a/source/cv.html
+++ b/source/cv.html
@@ -11,11 +11,17 @@ use:
                  alt="Luis">
         </div>
         <div class="media-body">
-            <!--<div class="media-heading"><h1>¡Hola!</h1></div>-->
-
             <h1>Luis Montealegre
                 <small>Web Developer</small>
             </h1>
+            <p>
+                <i class="fa fa-map-marker" aria-hidden="true"></i>
+                San Antonio TX
+            </p>
+            <p>
+                <i class="fa fa-envelope" aria-hidden="true"></i>
+                montealegreluis@gmail.com
+            </p>
         </div>
     </div>
 </header>
@@ -23,18 +29,15 @@ use:
     <section class="col-xs-6">
         <h2>
             <i class="fa fa-info-circle" aria-hidden="true"></i>
-            Contact
+            About
         </h2>
-        <ul>
-            <li>
-                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                San Antonio TX
-            </li>
-            <li>
-                <i class="fa fa-envelope" aria-hidden="true"></i>
-                montealegreluis@gmail.com
-            </li>
-        </ul>
+        <p>
+            I've been programming, professionally since graduating with a
+            Master's Degree in Computer Science in 2003. I have over 12 years
+            experience in tech both in Mexico and the United States. In my spare
+            time I love to spend time with my family and learn new programming
+            languages.
+        </p>
     </section>
     <section class="col-xs-6">
         <h2>
