Fix format in 'about' and 'cv' pages.

--- a/source/cv.html
+++ b/source/cv.html
@@ -7,18 +7,17 @@ use:
 <header>
     <div class="media col-sm-12 avatar">
         <div class="media-left media-middle">
-            <img src="/images/luis.jpg" class="media-object img-circle"
-                 alt="Luis">
+            <img
+                src="/images/luis.jpg"
+                class="media-object img-circle"
+                alt="Luis"
+            >
         </div>
         <div class="media-body">
-            <h1>Luis Montealegre
-                <small>Web Developer</small>
-            </h1>
+            <h1>Luis Montealegre <small>Web Developer</small></h1>
             <p>
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
-                San Antonio TX
-            </p>
-            <p>
+                San Antonio TX &nbsp;
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 montealegreluis@gmail.com
             </p>
@@ -26,130 +25,129 @@ use:
     </div>
 </header>
 <main>
-    <section class="col-xs-6">
-        <h2>
-            <i class="fa fa-info-circle" aria-hidden="true"></i>
-            About
-        </h2>
-        <p>
-            I've been programming, professionally since graduating with a
-            Master's Degree in Computer Science in 2003. I have over 12 years
-            experience in tech both in Mexico and the United States. In my spare
-            time I love to spend time with my family and learn new programming
-            languages.
-        </p>
-    </section>
-    <section class="col-xs-6">
-        <h2>
-            <i class="fa fa-university" aria-hidden="true"></i>
-            Education
-        </h2>
-        <ul>
-            <li>
-                Master in Computer Science. Benemérita Universidad Autónoma de
-                Puebla.
-                2003-2005. Professional ID: 4756930.
-            </li>
-            <li>
-                BS in Computer Science. Benemérita Universidad Autónoma de
-                Puebla.
-                1998-2003. Professional ID: 4082337.
-            </li>
-        </ul>
-    </section>
-
-    <h2>
-        <i class="fa fa-building" aria-hidden="true"></i>
-        Professional Experience
-    </h2>
-    <ul>
-        <li>
-            <strong>Inertia Interactive Media</strong>. Web Developer. May 2015
-            - December 2015. Maintainer of a Symfony2 application with an
-            integration with Salesforce implemented using the SF SOAP API and
-            RabbitMQ queues.
-        </li>
-        <li>
-            <strong>Digizent International</strong>. PHP developer of a Symfony1
-            application to manage email campaigns for fundraising. April 2013 -
-            December-2013.
-        </li>
-        <li>
-            <strong>Ellucian (Sungard Higher Education)</strong>. .NET Developer
-            of the Advancement Solutions team. January 2009 - April 2013. I
-            collaborated with the team
-            with a product developed in C# and VB, which made heavy use of
-            Oracle
-            PL/SQL stored procedures.
-        </li>
-        <li>
-            <strong>BIC Consulting</strong> Java Consultant. December 2010 - June 2011.
-            During
-            this period I worked maintaining the data access layer of a POS
-            using
-            Hibernate and PostgreSQL and couching some Jr. consultants.
-        </li>
-        <li>
-            <strong>Comisión Federal de Electricidad</strong>. Java and PHP developer of the
-            department: Desarrollo e Innovación de Sistemas. August 2005 –
-            January
-            2006. I developed a monitoring application for some customer service
-            systems written in Java with a reporting website written in PHP.
-        </li>
-        <li>
-            I worked part-time as an <strong>independent consultant</strong> in PHP development,
-            from
-            2007 to 2014, with several companies in Puebla. I developed
-            applications
-            with ZF1, Slim and Silex mainly. From January 2014 to april 2015 I
-            started to work as a full-time PHP consultant for some agencies in
-            Mexico City (Indava and Mupcow), and some others in Puebla (Sistemas
-            Integrales de Cómputo Montellano (SICOM) and Sii Ayuda).
-        </li>
-    </ul>
-
-    <section class="col-xs-6">
-        <h2>
-            <i class="fa fa-certificate" aria-hidden="true"></i>
-            Certifications
-        </h2>
-        <ul>
-            <li>Latinux Certified Linux Operator</li>
-            <li>Oracle Certified Java Programmer</li>
-            <li>Microsoft Certified Technology Specialist, Microsoft SQL
-                Server
-            </li>
-            <li>Microsoft Certified Technology Specialist, Web Applications</li>
-        </ul>
-        <h2>
-            <i class="fa fa-language" aria-hidden="true"></i>
-            Languages
-        </h2>
-        <ul>
-            <li>English & Spanish</li>
-        </ul>
-    </section>
-
-    <section class="col-xs-6">
-        <h2>
-            <i class="fa fa-graduation-cap" aria-hidden="true"></i>
-            Teaching experience
-        </h2>
-        <p>
-            I am currently working at Codeup in SA. TX. as a full-time
-            instructor
-            teaching either PHP or Java to future entry-level full-stack
-            developers
-            During the last 11 years I've been also working as a part-time
-            lecturer
-            in
-            10 universities in Puebla. I have given classes to more than 65
-            groups,
-            bachelor and master degree. I have successfully directed 4 thesis. I
-            also
-            have published some papers being the most relevant a chapter in the
-            Lecture
-            Notes in Computer Science Volume Number 4386, pages 194–211 in 2007.
-        </p>
-    </section>
+    <div class="row">
+        <section class="col-xs-12 col-sm-6">
+            <h2>
+                <i class="fa fa-info-circle" aria-hidden="true"></i>
+                About
+            </h2>
+            <p>
+                I've been programming, professionally since graduating with a
+                Master's Degree in Computer Science in 2003. I have over 12
+                years experience in tech both in Mexico and the United States.
+                In my spare time I love to spend time with my family and learn
+                new programming languages.
+            </p>
+        </section>
+        <section class="col-xs-12 col-sm-6">
+            <h2>
+                <i class="fa fa-university" aria-hidden="true"></i>
+                Education
+            </h2>
+            <ul>
+                <li>
+                    Master in Computer Science. Benemérita Universidad Autónoma
+                    de Puebla. 2003-2005.
+                </li>
+                <li>
+                    BS in Computer Science. Benemérita Universidad Autónoma de
+                    Puebla. 1998-2003.
+                </li>
+            </ul>
+        </section>
+    </div>
+    <div class="row">
+        <section class="col-xs-12">
+            <h2>
+                <i class="fa fa-building" aria-hidden="true"></i>
+                Work Experience
+            </h2>
+            <ul>
+                <li>
+                    <strong>Inertia Interactive Media</strong>. Web Developer.
+                    May 2015 - December 2015. Maintainer of a Symfony2
+                    application with an integration with Salesforce implemented
+                    using the SF SOAP API and RabbitMQ queues.
+                </li>
+                <li>
+                    <strong>Digizent International</strong>. PHP developer of a
+                    Symfony1 application to manage email campaigns for
+                    fundraising. April 2013 - December-2013.
+                </li>
+                <li>
+                    <strong>Ellucian (Sungard Higher Education)</strong>. .NET
+                    Developer of the Advancement Solutions team. January 2009 -
+                    April 2013. I collaborated with the team with a product
+                    developed in C# and VB, which made heavy use of Oracle
+                    PL/SQL stored procedures.
+                </li>
+                <li>
+                    <strong>BIC Consulting</strong> Java Consultant. December
+                    2010 - June 2011. During this period I worked maintaining
+                    the data access layer of a POS using Hibernate and
+                    PostgreSQL and couching some Jr. consultants.
+                </li>
+                <li>
+                    <strong>Comisión Federal de Electricidad</strong>. Java and
+                    PHP developer of the department: Desarrollo e Innovación de
+                    Sistemas. August 2005 – January 2006. I developed a
+                    monitoring application for some customer service systems
+                    written in Java with a reporting website written in PHP.
+                </li>
+                <li>
+                    I worked part-time as an <strong>independent consultant
+                    </strong> in PHP development, from 2007 to 2014, with
+                    several companies in Puebla. I developed applications
+                    with ZF1, Slim and Silex mainly. From January 2014 to april
+                    2015 I started to work as a full-time PHP consultant for
+                    some agencies in Mexico City (Indava and Mupcow), and some
+                    others in Puebla (Sistemas Integrales de Cómputo Montellano
+                    (SICOM) and Sii Ayuda).
+                </li>
+            </ul>
+        </section>
+    </div>
+    <div class="row">
+        <section class="col-xs-12 col-sm-6">
+            <h2>
+                <i class="fa fa-certificate" aria-hidden="true"></i>
+                Certifications
+            </h2>
+            <ul>
+                <li>Latinux Certified Linux Operator</li>
+                <li>Oracle Certified Java Programmer</li>
+                <li>
+                    Microsoft Certified Technology Specialist, Microsoft SQL
+                    Server
+                </li>
+                <li>
+                    Microsoft Certified Technology Specialist, Web Applications
+                </li>
+            </ul>
+            <h2>
+                <i class="fa fa-language" aria-hidden="true"></i>
+                Languages
+            </h2>
+            <ul>
+                <li>English & Spanish</li>
+            </ul>
+        </section>
+        <section class="col-xs-12 col-sm-6">
+            <h2>
+                <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+                Teaching experience
+            </h2>
+            <p>
+                I am currently working at Codeup in SA. TX. as a full-time
+                instructor teaching either PHP or Java to future entry-level
+                full-stack developers During the last 11 years I've been also
+                working as a part-time lecturer in 10 universities in Puebla. I
+                have given classes to more than 65 groups, bachelor and master
+                degree. I have successfully directed 4 thesis. I also have
+                published some papers being the most relevant a chapter in the
+                Lecture Notes in Computer Science Volume Number 4386, pages
+                194–211 in 2007.
+            </p>
+        </section>
+    </div>
 </main>
