Make the about page, the home page.

--- a/source/blog.html
+++ b/source/blog.html
@@ -1,11 +1,11 @@
 ---
-layout: index
+layout: default
 title: Bienvenid@
 generator: pagination
 pagination:
     max_per_page: 6
 use:
-    - posts
+    - posts_categories
 ---
 <div class="posts-list">
 {% for post in page.pagination.items %}
