Format the descriptions in the work experience section of my CV.

--- a/source/cv.html
+++ b/source/cv.html
@@ -64,45 +64,52 @@ use:
             </h2>
             <ul>
                 <li>
-                    <strong>Inertia Interactive Media</strong>. Web Developer.
-                    May 2015 - December 2015. Maintainer of a Symfony2
-                    application with an integration with Salesforce implemented
-                    using the SF SOAP API and RabbitMQ queues.
+                    <em>Inertia Interactive Media [05/15 – 12/15].</em>.
+                    <strong>Web Developer</strong>.
+                    Maintainer of a <strong>Symfony2</strong> application with
+                    an integration to the <strong>Salesforfoce SOAP API</strong>
+                    implemented via Web hooks and <strong>RabbitMQ</strong>
+                    queues.
                 </li>
                 <li>
-                    <strong>Digizent International</strong>. PHP developer of a
-                    Symfony1 application to manage email campaigns for
-                    fundraising. April 2013 - December-2013.
+                    <em>Digizent International [04/13 – 12/13]</em>.
+                    <strong>PHP developer</strong> of a <strong>Symfony1</strong>
+                    application to manage email campaigns for fundraising.
                 </li>
                 <li>
-                    <strong>Ellucian (Sungard Higher Education)</strong>. .NET
-                    Developer of the Advancement Solutions team. January 2009 -
-                    April 2013. I collaborated with the team with a product
-                    developed in C# and VB, which made heavy use of Oracle
-                    PL/SQL stored procedures.
+                    <em>Ellucian (Sungard Higher Education) [01/09 – 04/13]</em>.
+                    <strong>.NET Developer</strong> of the Advancement Solutions
+                    team. I collaborated with the team with a product developed
+                    in <strong>C#</strong> and <strong>VB</strong>, which made
+                    heavy use of <strong>Oracle PL/SQL</strong> stored procedures.
                 </li>
                 <li>
-                    <strong>BIC Consulting</strong> Java Consultant. December
-                    2010 - June 2011. During this period I worked maintaining
-                    the data access layer of a POS using Hibernate and
-                    PostgreSQL and couching some Jr. consultants.
+                    <em>BIC Consulting [12/10 – 06/11]</em>. <strong>Java
+                    Consultant</strong>. During this period I worked maintaining
+                    the data access layer of a POS using <strong>Hibernate</strong>
+                    and <strong>PostgreSQL</strong> and <strong>couching</strong>
+                    some Jr. consultants.
                 </li>
                 <li>
-                    <strong>Comisión Federal de Electricidad</strong>. Java and
-                    PHP developer of the department: Desarrollo e Innovación de
-                    Sistemas. August 2005 – January 2006. I developed a
+                    <em>Comisión Federal de Electricidad [08/05-01/2006]</em>.
+                    <strong>Java and PHP developer</strong> of the department:
+                    Desarrollo e Innovación de Sistemas. I developed a
                     monitoring application for some customer service systems
-                    written in Java with a reporting website written in PHP.
+                    written in <strong>Java</strong> with a reporting website
+                    written in <strong>PHP</strong>.
                 </li>
                 <li>
-                    I worked part-time as an <strong>independent consultant
-                    </strong> in PHP development, from 2007 to 2014, with
-                    several companies in Puebla. I developed applications
-                    with ZF1, Slim and Silex mainly. From January 2014 to april
-                    2015 I started to work as a full-time PHP consultant for
-                    some agencies in Mexico City (Indava and Mupcow), and some
-                    others in Puebla (Sistemas Integrales de Cómputo Montellano
-                    (SICOM) and Sii Ayuda).
+                    <em>Independent PHP consultant (part-time) [08/07 – 01/14]</em>.
+                    I worked for several companies in Puebla. I developed several
+                    applications with <strong>ZF1</strong>, <strong>Slim</strong>
+                    and <strong>Silex</strong> mainly.
+                </li>
+                <li>
+                    <em>Independent PHP consultant (full-time) [01/14 – 05/15]</em>.
+                    I worked for several agencies in Mexico City (Indava and
+                    Mupcow), and some others in Puebla (Sistemas Integrales de
+                    Cómputo Montellano (SICOM) and Sii Ayuda)  maintaining
+                    <strong>Symfony2</strong> applications mainly.
                 </li>
             </ul>
         </section>
