Reorganize home page content.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head lang="es-mx">
-    <title>¿Quién soy? &mdash; Your argument is invalid &mdash; Luis Montealegre</title>
+    <title>¡Hola! &mdash; Your argument is invalid &mdash; Luis Montealegre</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -99,13 +99,14 @@
     </div>
 
     <div class="content container">
-        <div class="row">
+        <article class="row">
+    <div class="col-sm-12">
+        <header class="page-header"><h1> ¡Hola!</h1></header>
+    </div>
     <div class="col-sm-6">
-        <h1>¡Hola!</h1>
         <p>
-            Mi nombre es Luis Montealegre Vázquez y soy un <strong>Desarrollador
-            Web</strong>, egresado de la <strong>Maestría en Ciencias de la
-            Computación</strong> en la
+            Mi nombre es Luis Montealegre Vázquez, egresé de la <strong>Maestría en
+            Ciencias de la Computación</strong> en la
             <a href="http://www.cs.buap.mx/" target="_blank" rel="noopener">
                 BUAP
             </a>
@@ -137,27 +138,14 @@
                 Digizent International
             </a>
             y como <strong>consultor independiente</strong>.
+            Durante estos <strong>12 años</strong> he trabajado con varios
+            lenguajes de programación, principalmente: <strong>PHP</strong>, <strong>Java</strong>
+            y <strong>C#</strong>
         </p>
         <p>
-            Durante estos <strong>11 años</strong> he trabajado con varios
-            lenguajes de programación, principalmente:
-        </p>
-        <ul>
-            <li>PHP</li>
-            <li>Java</li>
-            <li>C#</li>
-        </ul>
-        <p>
-            Durante casi el mismo periodo he trabajado para más de 10
-            universidades (BUAP,
-            <a href="http://www.uvp.mx/" target="_blank" rel="noopener">
-                UVP
-            </a>, e ITP, entre otras), como profesor por asignatura, en varias
-            materias de programación.
-        </p>
-        <p>
-            En julio de 2012, con el apoyo de muchos amig@s, comienzo a
-            organizar el
+            También he sido profesor por asignatura en 10 universidades en Puebla,
+            en varias materias de programación.
+            En julio de 2012, con el apoyo de muchos amig@s, organizamos el
             <a
                 href="http://www.comunidadphppuebla.com"
                 target="_blank"
@@ -166,6 +154,8 @@
                 Grupo de usuarios PHP en Puebla
             </a>.
         </p>
+    </div>
+    <div class="col-sm-6">
         <p>
             En enero de 2016 me mudé a <strong>San Antonio Texas</strong> a
             empezar una nueva aventura con mi familia, como instructor, por
@@ -174,59 +164,19 @@
                 Codeup
             </a>.
         </p>
-    </div>
-    <div class="col-sm-6">
-        <p>
-            <figure class="text-center">
-                <img
-                    src="/images/uncle-bob.jpg"
-                    class="img-responsive img-rounded center-block"
-                    alt="Con Uncle Bob"
-                    title="Con Uncle Bob"
-                >
-                <figcaption>Uncle Bob</figcaption>
-            </figure>
-        </p>
-        <p>
-            <figure class="text-center">
-                <img
-                    src="/images/eric-evans.jpg"
-                    class="img-responsive img-rounded center-block"
-                    alt="Con Eric Evans"
-                    title="Con Eric Evans"
-                >
-                <figcaption>Eric Evans</figcaption>
-            </figure>
-        </p>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-sm-6">
-        <br>
-        <img
-            src="/images/comunidad.jpg"
-            class="img-responsive img-rounded center-block"
-            alt="Amigos comunidad"
-        >
-    </div>
-    <div class="col-sm-6">
-        <h2>Algo más personal :)</h2>
         <p>
             Fuera de mi trabajo me gusta pasar tiempo con mi esposa (Meri) y mis dos
             hijos (Mario de 5 años y Alejandro de 3). Soy fan del café cargado y sin
             azucar, de la pizza, el sushi, la cerveza oscura y de las películas de
             ciencia ficción.
         </p>
-
-        <h2>¿Puedo hacer algo por ti?</h2>
         <p>
-            Puedes ponerte en contacto conmigo a través de cualquiera de las redes
-            sociales que ves en el menú del sitio o por correo, ya sea para trabajar
-            en algo juntos o para que me platiques de lo que quieras.
+            <strong>Puedes ponerte en contacto conmigo</strong> a través de las redes
+            sociales en este sitio o por correo, ya sea para trabajar
+            en algo juntos o para que platiquemos de lo que quieras.
         </p>
     </div>
-</div>
+</article>
 
 <div class="row">
     <div class="col-sm-12">
@@ -237,7 +187,38 @@
             </p>
         </blockquote>
     </div>
-</div>    </div>
+</div>
+<section class="row">
+    <div class="col-sm-4">
+        <figure class="text-center">
+            <img
+                    src="/images/uncle-bob.jpg"
+                    class="img-responsive img-rounded center-block"
+                    alt="Con Uncle Bob"
+                    title="Con Uncle Bob"
+            >
+            <figcaption>Uncle Bob</figcaption>
+        </figure>
+    </div>
+    <div class="col-sm-4">
+        <img
+                src="/images/comunidad.jpg"
+                class="img-responsive img-rounded center-block"
+                alt="Amigos comunidad"
+        >
+    </div>
+    <div class="col-sm-4">
+        <figure class="text-center">
+            <img
+                    src="/images/eric-evans.jpg"
+                    class="img-responsive img-rounded center-block"
+                    alt="Con Eric Evans"
+                    title="Con Eric Evans"
+            >
+            <figcaption>Eric Evans</figcaption>
+        </figure>
+    </div>
+</section>    </div>
 
     <footer>
         <div class="container">
